--- a/src/Controls/KarveControls/HeaderedWindow/LineGridView.xaml
+++ b/src/Controls/KarveControls/HeaderedWindow/LineGridView.xaml
@@ -95,6 +95,10 @@
                                     SelectionForegroundBrush="Black"
                                     NavigationMode="Cell"
                                     AddNewRowPosition="Bottom"
+                                    karveControls:KarveGridExt.GridIdentifier="{Binding GridIdentifier, Mode=OneWay}"
+                                    karveControls:KarveGridExt.GridInitCommand="{Binding GridRegisterCommand, Mode=OneWay}"
+                                    karveControls:KarveGridExt.GridParamChangedCommand="{Binding GridResizeCommand, Mode=OneWay}"
+                                    karveControls:KarveGridExt.GridParameters="{Binding GridParam, Mode=OneWay}"
                                     karveControls:ControlExt.SelectedItem="{Binding SelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                     karveControls:ControlExt.DataSource="{Binding SourceView, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                     karveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
