--- a/src/Modules/InvoiceModule/Views/InvoiceSummaryFooter.xaml
+++ b/src/Modules/InvoiceModule/Views/InvoiceSummaryFooter.xaml
@@ -35,6 +35,7 @@
             LabelText="{Binding ldtopp, Source={StaticResource ResourceLanguage}}"
             DataObject="{Binding DataObject}"
             DataSourcePath="DTOPP"
+            IsReadOnly="True"
             LabelTextWidth="50"
             TextContentWidth="100"
             ItemChangedCommand="{Binding ItemChangedCommand}"
@@ -50,7 +51,8 @@
             LabelText="{Binding lbase, Source={StaticResource ResourceLanguage}}"
             LabelTextWidth="80"
             TextContentWidth="100"
-            DataObject="{Binding DataObject}"
+                    IsReadOnly="True"
+                    DataObject="{Binding DataObject}"
             DataSourcePath="BASE_FAC"
             ItemChangedCommand="{Binding ItemChangedCommand}"
             TextContent="{Binding Path=DataObject.BASE_FAC, 
@@ -65,6 +67,7 @@
             LabelText="{Binding liva, Source={StaticResource ResourceLanguage}}"
             LabelTextWidth="30"
             TextContentWidth="50"
+                    IsReadOnly="True"
             DataObject="{Binding DataObject}"
             DataSourcePath="IVAPOR_FAC"
             ItemChangedCommand="{Binding ItemChangedCommand}"
@@ -81,6 +84,7 @@
             LabelText="Total"
             LabelTextWidth="50"
             TextContentWidth="100"
+                    IsReadOnly="True"
             DataObject="{Binding ltotal, Source={StaticResource ResourceLanguage}}"
             DataSourcePath="TODO_FAC"
             ItemChangedCommand="{Binding ItemChangedCommand}"
